tests/parsing/smtlib/mcil/errors/258_check-system_bad_query.mcil
(check-system sys :queries (a))